--- a/homework_6a/index.html
+++ b/homework_6a/index.html
@@ -7,7 +7,9 @@
         <meta name="description" content="Homework 5"/>
         <meta name="author" content="Jennifer Lee"/>
         <link href="https://fonts.googleapis.com/css?family=Airbnb+Cereal App&display=swap" rel="stylesheet">
+    
         <link rel="stylesheet" type="text/css" href="styles.css"/>
+        <script src="main.js" type="text/javascript"></script>
     </head>
     
     <body>
@@ -20,7 +22,7 @@
                         <li class=about>About</li>
                         <li class=order><a href=order.html>Order</a></li>
                         <li class=contact>Contact</li>
-                        <li class = "cart"><a href="cart.html">Cart (<span class="cart-items">0</span>)</a></li>
+                        <li class = "cart"><a href="shopping_cart.html">Cart (<span class="cart-items">0</span>)</a></li>
                     </ul>
                 </nav>
             </header>
