--- a/homework_6a/original.html
+++ b/homework_6a/original.html
@@ -49,10 +49,10 @@
         
         <div class=quantity>
             <h2>Quantity</h2>
-            <span class="item_quantity" data-quantity="1" data-price="2" style="position:absolute; top:605px; left:739px;">1</span>
-            <span class="item_quantity" data-quantity="3" data-price="6" style="position:absolute; top:605px; left:875px;">3</span>
-            <span class="item_quantity" data-quantity="6" data-price="12" style="position:absolute; top:605px; left:1012px;">6</span>
-            <span class="item_quantity" data-quantity="12" data-price="24" style="position:absolute; top:605px; left:1149px;">12</span>
+            <span class="item_quantity" data-item_quantity="1" data-price="2" style="position:absolute; top:605px; left:739px;">1</span>
+            <span class="item_quantity" data-item_quantity="3" data-price="6" style="position:absolute; top:605px; left:875px;">3</span>
+            <span class="item_quantity" data-item_quantity="6" data-price="12" style="position:absolute; top:605px; left:1012px;">6</span>
+            <span class="item_quantity" data-item_quantity="12" data-price="24" style="position:absolute; top:605px; left:1149px;">12</span>
         </div>
         
         <div class=ingredients>
