--- a/homework_8/index.html
+++ b/homework_8/index.html
@@ -66,7 +66,7 @@
           <a id="projects"></a>
           <div class="row justify-content-center">
             <div class="col-lg-4">
-              <a type="image" href="assets/Hatch/hatch.html">
+              <a type="image" href="hatch.html">
                 <img class="project-card-img" src="assets/imgs/Hatch_Project_Splash_Photo.png" onmouseover="this.src='assets/imgs/Hatch_Hover_Photo.png';" onmouseout="this.src='assets/imgs/Hatch_Project_Splash_Photo.png';"/>
               </a>
             </div>
