--- a/homework_8/index.html
+++ b/homework_8/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <title>Jennifer's Portfolio</title>
 
-    <!-- Load Bootstrap-->
+    <!-- Load Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     
     <!-- CSS -->
@@ -55,7 +55,7 @@
             <div class="col-lg-8">
               <img src="assets/imgs/Jennifer_Animoji.png" alt="Jennifer's emoticon" class="animoji"/> 
               <h3 class="tagline">Hello, I'm Jennifer! I am <span id="changing-header" class="blink"></span></h3>
-              <h4 class="subtagline">Currently a Master's student at Carnegie Mellon University pursuing <br><a href= "https://www.hcii.cmu.edu/academics/mhci" target="_blank">Human Computer Interaction</a>.</h4>
+              <h4 class="subtagline">Currently a Master's student at Carnegie Mellon University pursuing <a href= "https://www.hcii.cmu.edu/academics/mhci" target="_blank">Human Computer Interaction</a>.</h4>
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-2"></div>
@@ -110,9 +110,6 @@
       <footer class="container-fluid" id="footer">
         Made with ❤️ + ☕️ by Jennifer
       </footer>
-    </div>
-    <script>
-      AOS.init();
-    </script>  
+    </div> 
   </body>
 </html>
